assignment complete without bonus

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="card-item second-card">
           <img src="./images/illustrators/illustrator-2.png" alt="Mission-image" class="mission-image" />
           <div class="activity-body">
-            <h3 class="activity-header">Vission</h3>
+            <h3 class="activity-header">Vision</h3>
             <p class="activity-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
           </div>
         </div>
@@ -45,5 +45,37 @@
         </div>
       </div>
     </section>
+    <section class="communication">
+      <div class="flexible-container">
+        <div class="communication-coding-image">
+          <img src="./images/pictures/coding.png" alt="coding picture" />
+        </div>
+        <div class="communication-text">
+          <h2 class="community-header">Develop</h2>
+          <h2 class="community-header">Without Limits</h2>
+          <p class="text-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
+          <a href="#" class="colored-button">Read the Documentation</a>
+        </div>
+      </div>
+    </section>
+    <section class="communication-repeat">
+      <div class="flexible-container">
+        <div class="communication-project-text">
+          <h2 class="community-header">Know our</h2>
+          <h2 class="community-header">Global Community</h2>
+          <p class="text-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
+          <a href="#" class="colored-button">Read the Documentation</a>
+        </div>
+        <div class="communication-project-image">
+          <img src="./images/pictures/project.png" alt="coding picture" />
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer-body">
+        <h2 class="footer-title">Mission <span class="footer-text-color">2022</span></h2>
+        <p class="footer-text">Hard work, Perseverance, and Determination for 2022</p>
+      </div>
+    </footer>
   </body>
 </html>
