meaningful description added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="flexible-container">
       <div class="top-banner-text">
         <h1 class="header-text">Stay Focused on <span class="colored-text">Mission 2022</span></h1>
-        <p class="text-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem expedita, optio unde, animi impedit velit sed delectus a molestiae voluptatem suscipit? Suscipit dolor labore in magni dicta doloremque earum dignissimos?</p>
+        <p class="text-description">To stay focused in 2022, I need to work hard and watchful on time management. I should not waste too much time figuring out what is best for me rather than trying what's i like most.</p>
         <a href="#" class="colored-button">Explore Now</a>
         <p class="scroll-text">Scroll down to explore more about me</p>
       </div>
@@ -26,21 +26,21 @@
           <img src="./images/illustrators/illustrator-1.png" alt="Mission-image" class="mission-image" />
           <div class="activity-body">
             <h3 class="activity-header">Mission</h3>
-            <p class="activity-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+            <p class="activity-text">To enhancing the business growth of my customers with creative Design and Development to deliver market-defining high-quality solutions.</p>
           </div>
         </div>
         <div class="card-item second-card">
           <img src="./images/illustrators/illustrator-2.png" alt="Mission-image" class="mission-image" />
           <div class="activity-body">
             <h3 class="activity-header">Vision</h3>
-            <p class="activity-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+            <p class="activity-text">To become a prime performer, in providing quality Web, Print and Software solutions in the competitive global market place.</p>
           </div>
         </div>
         <div class="card-item third-card">
           <img src="./images/illustrators/illustrator-3.png" alt="Mission-image" class="mission-image" />
           <div class="activity-body">
             <h3 class="activity-header">Goal</h3>
-            <p class="activity-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+            <p class="activity-text">To become a successfull and experienced web developer and find a job that worth my skills.</p>
           </div>
         </div>
       </div>
@@ -53,8 +53,8 @@
         <div class="communication-text">
           <h2 class="community-header">Develop</h2>
           <h2 class="community-header">Without Limits</h2>
-          <p class="text-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
-          <a href="#" class="colored-button">Read the Documentation</a>
+          <p class="text-description">Many web developers start their careers with a single focus, usually front-end or back-end development. They may move on to be full-stack developers or explore careers in related fields, including project management, computer programming, or graphic design.</p>
+          <a href="https://www.coursera.org/articles/web-developer" class="colored-button" target="_blank">Read the Documentation</a>
         </div>
       </div>
     </section>
@@ -63,8 +63,8 @@
         <div class="communication-project-text">
           <h2 class="community-header">Know our</h2>
           <h2 class="community-header">Global Community</h2>
-          <p class="text-description">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An mundi noster pri, ea eos quas expetendis scripserit, affert gubergren dissentias et cum.</p>
-          <a href="#" class="colored-button">Read the Documentation</a>
+          <p class="text-description">Since the 1990s, few things have remained timeless societal staples like Friends, Pokémon, Britney Spears, and the internet.Seriously. Lots of things have come and gone, but these guys have stuck around, rolled with the Y2K punches, and integrated themselves into our society.</p>
+          <a href="https://blog.hubspot.com/website/website-development" class="colored-button" target="_blank">Read the Documentation</a>
         </div>
         <div class="communication-project-image">
           <img src="./images/pictures/project.png" alt="coding picture" />
