assignment final check needed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     </section>
     <section class="mission">
-      <h2 class="mission-header">My Mission in <span class="colored-text">2022</span></h2>
+      <h2 class="header-title">My Mission in <span class="colored-text">2022</span></h2>
       <div class="mission-card flexible-container">
         <div class="card-item first-card">
           <img src="./images/illustrators/illustrator-1.png" alt="Mission-image" class="mission-image" />
@@ -68,6 +68,37 @@
         </div>
         <div class="communication-project-image">
           <img src="./images/pictures/project.png" alt="coding picture" />
+        </div>
+      </div>
+    </section>
+    <section class="my-projects">
+      <h2 class="header-title">My <span class="colored-text">Projects</span></h2>
+      <div class="projects">
+        <div class="project-details">
+          <img src="./images/projects/project-1.png" alt="first-project">
+          <h3 class="project-title">Music Stereo</h3>
+        </div>
+        <div class="project-details">
+          <img src="./images/projects/project-2.png" alt="second-project">
+          <h3 class="project-title">Daily Notepad</h3>
+        </div>
+        <div class="project-details">
+          <img src="./images/projects/project-3.png" alt="third-project">
+          <h3 class="project-title">Business App</h3>
+        </div>
+      </div>
+      <div class="projects">
+        <div class="project-details">
+          <img src="./images/projects/project-4.png" alt="forth-project">
+          <h3 class="project-title">Music App</h3>
+        </div>
+        <div class="project-details">
+          <img src="./images/projects/project-5.png" alt="fifth-project">
+          <h3 class="project-title">Cline Website</h3>
+        </div>
+        <div class="project-details">
+          <img src="./images/projects/project-6.png" alt="sixth-project">
+          <h3 class="project-title">store App</h3>
         </div>
       </div>
     </section>
