--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Saifullah Mansur | Portfolio</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
+
   <body>
     <section class="flexible-container">
       <div class="top-banner-text">
@@ -19,6 +20,7 @@
         <img src="./images/person/saifullah-mansur.png" alt="Saifullah Mansur" />
       </div>
     </section>
+
     <section class="mission">
       <h2 class="header-title">My Mission in <span class="colored-text">2022</span></h2>
       <div class="mission-card flexible-container">
@@ -45,6 +47,7 @@
         </div>
       </div>
     </section>
+    
     <section class="communication">
       <div class="flexible-container">
         <div class="communication-coding-image">
@@ -58,6 +61,7 @@
         </div>
       </div>
     </section>
+
     <section class="communication-repeat">
       <div class="flexible-container">
         <div class="communication-project-text">
@@ -71,42 +75,45 @@
         </div>
       </div>
     </section>
+
     <section class="my-projects">
       <h2 class="header-title">My <span class="colored-text">Projects</span></h2>
       <div class="projects">
         <div class="project-details">
-          <img src="./images/projects/project-1.png" alt="first-project">
+          <img src="./images/projects/project-1.png" alt="first-project" />
           <h3 class="project-title">Music Stereo</h3>
         </div>
         <div class="project-details">
-          <img src="./images/projects/project-2.png" alt="second-project">
+          <img src="./images/projects/project-2.png" alt="second-project" />
           <h3 class="project-title">Daily Notepad</h3>
         </div>
         <div class="project-details">
-          <img src="./images/projects/project-3.png" alt="third-project">
+          <img src="./images/projects/project-3.png" alt="third-project" />
           <h3 class="project-title">Business App</h3>
         </div>
       </div>
       <div class="projects">
         <div class="project-details">
-          <img src="./images/projects/project-4.png" alt="forth-project">
+          <img src="./images/projects/project-4.png" alt="forth-project" />
           <h3 class="project-title">Music App</h3>
         </div>
         <div class="project-details">
-          <img src="./images/projects/project-5.png" alt="fifth-project">
+          <img src="./images/projects/project-5.png" alt="fifth-project" />
           <h3 class="project-title">Cline Website</h3>
         </div>
         <div class="project-details">
-          <img src="./images/projects/project-6.png" alt="sixth-project">
+          <img src="./images/projects/project-6.png" alt="sixth-project" />
           <h3 class="project-title">store App</h3>
         </div>
       </div>
     </section>
+
     <footer>
       <div class="footer-body">
         <h2 class="footer-title">Mission <span class="footer-text-color">2022</span></h2>
         <p class="footer-text">Hard work, Perseverance, and Determination for 2022</p>
       </div>
     </footer>
+    
   </body>
 </html>
